--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -44,7 +44,7 @@
     .inner
       = render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash})
       = form_tag rails_admin_bulk_delete_path(:model_name => @abstract_model.to_param), :method => :get do
-        %table.table
+        %table.table.grid
           %tr
             %th.first
               %input.checkbox.toggle{:type => "checkbox"}
@@ -64,21 +64,22 @@
             
             %th.last
             
-            - @objects.each do |object|
-              %tr{:class => cycle("odd", "even")}
-                %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}", :class => "checkbox"
-                - other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1)
-                %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => false
-                - properties.map{|property| property.bind(:object, object)}.each do |property|
-                  %td{:class => "#{property.css_class}"}= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value
-                - other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1)
-                %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => false
-                %td.last
-                  = action_icon("#", :show, "Show")   
-                  - if authorized? :edit, @abstract_model, object
-                    = action_icon(rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id), :edit, t("admin.list.edit_action"))                  
-                  - if authorized? :delete, @abstract_model, object
-                    = action_icon(rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id), :cross, t("admin.list.delete_action")) 
+            %tbody
+              - @objects.each do |object|
+                %tr{:class => cycle("odd", "even")}
+                  %td.action.select= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}", :class => "checkbox"
+                  - other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1)
+                  %td.other.left{ :style => "#{'display: none' if @other.include?("left")}" }= link_to "...", other_left, :remote => false
+                  - properties.map{|property| property.bind(:object, object)}.each do |property|
+                    %td{:class => "#{property.css_class}"}= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value
+                  - other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1)
+                  %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => false
+                  %td.last
+                    = action_icon("#", :show, "Show")   
+                    - if authorized? :edit, @abstract_model, object
+                      = action_icon(rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id), :edit, t("admin.list.edit_action"))                  
+                    - if authorized? :delete, @abstract_model, object
+                      = action_icon(rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id), :cross, t("admin.list.delete_action")) 
           
         .pagination
           - if @page_count.to_i > 1
