--- a/app/views/layouts/rails_admin/dashboard.html.haml
+++ b/app/views/layouts/rails_admin/dashboard.html.haml
@@ -1,11 +1,10 @@
 = render(:partial => 'layouts/rails_admin/head')
 %body
-  #wrapper
-    - content_for :breadcrumb do
-      %li= link_to(t('home.name'), root_path)
-      %li
-        \&rsaquo;
-        %span= t('admin.dashboard.name')
+  #container
     = render(:partial => 'layouts/rails_admin/header')
-    #content
-      = yield
+    #wrapper.wat-cf
+      #main
+        = yield
+        #footer
+          %p Rails Admin | 2011
+      = render :partial => "layouts/rails_admin/sidebar"
