Rails 3.1 support - Make engine mountable and isolate namespace

--- a/app/views/layouts/rails_admin/_header.html.erb
+++ b/app/views/layouts/rails_admin/_header.html.erb
@@ -12,7 +12,7 @@
 
     <div id="header2">
       <h1 id="logo">
-      <%= link_to rails_admin_dashboard_path do %>
+      <%= link_to dashboard_path do %>
         <span class="image_replacement"><%= @plugin_name %></span>
       <% end -%>
       </h1>
