--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -1,7 +1,6 @@
 <%
-  filters = params[:filters]
   query = params[:query]
-  params = request.params.except(:action, :controller, :model_name, :utf8, :bulk_export, :filters)
+  params = request.params.except(:action, :controller, :model_name, :utf8, :bulk_export)
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
   properties = @model_config.list.visible_fields.map{|property| property.with(:view => self)}
@@ -29,15 +28,15 @@
       $("#content").html(data);
     });
     
-    <%= filters.map do |field_name, values_hash|
+    
+    <%= params[:filters].map do |field_name, values_hash|
           field = @searchable_fields.find{ |field| field.name == field_name.intern }
           values_hash.map do |value_hash|
-            "append_filter('#{field.label}', '#{field_name}', '#{value_hash['value']}');"
+            "append_filter('#{field.label}', '#{field.name}', '#{field.type}', '#{value_hash['value']}', '#{value_hash['operator']}', '');" unless value_hash['disabled']
           end.join
-        end.join unless filters.blank? %>
+        end.join unless params[:filters].blank? %>
   });
 </script>
-
       <div class="ra-block">
         <div class="ui-widget-header">
           <%= @page_name %>
@@ -68,7 +67,7 @@
                 <select id="filter_select">
                   <option value="">Add filter</option>
                   <% @searchable_fields.each do |field| %>
-                    <option value="<%= field.name %>"><%=field.label %></option>
+                    <option data-field-options="" data-field-value="" data-field-type="<%= field.type %>" data-field-name="<%= field.name %>" data-field-label="<%= field.label %>"><%=field.label %></option>
                   <% end %>
                 </select>
                 <div id="filters_box" style="clear:both; margin: 10px 10px;">
@@ -87,8 +86,8 @@
                   <% selected = sort == property_name.to_s %>
                   <th class="<%= "#{property.css_class}" %> <%= selected ? "selected" : nil %>">
                     <% if property.sortable %>
-                    <% sort_location = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {})) %>
-                    <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
+                    <% sort_location = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {:sort_reverse => "false"})) %>
+                    <% sort_direction = selected ? (sort_reverse == 'true' ? "ascending" : "descending") : nil %>
                     <%= link_to(property_pretty_name.upcase, sort_location, :class => sort_direction, :remote => true) %>
                     <% else %>
                     <%= property_pretty_name.upcase %>
