Fix "underscore" does not exist form ActiveModel::Name

--- a/lib/generators/rails_admin/templates/initializer.erb
+++ b/lib/generators/rails_admin/templates/initializer.erb
@@ -57,7 +57,7 @@ RailsAdmin.config do |config|
 
   # config.model '<%= abstract_model.model.model_name %>' do
 
-  #   # You can copy this to a 'rails_admin do ... end' block inside your <%= abstract_model.model.model_name.underscore %>.rb model definition
+  #   # You can copy this to a 'rails_admin do ... end' block inside your <%= abstract_model.model.model_name.to_s.underscore %>.rb model definition
 
   #   # Found associations:
 
