--- a/lib/generators/rails_admin/templates/initializer.erb
+++ b/lib/generators/rails_admin/templates/initializer.erb
@@ -12,7 +12,7 @@ RailsAdmin.config do |config|
   # config.main_app_name = Proc.new { |controller| [Rails.application.engine_name.titleize, controller.params['action'].titleize] }
 
   # RailsAdmin may need a way to know who the current user is]
-  config.current_user_method { current_<%= @model_name.underscore %> } # auto-generated
+  config.current_user_method { current_<%= @model_name.to_s.underscore %> } # auto-generated
 
   # If you want to track changes on your models:
   # config.audit_with :history, '<%= @model_name.classify %>'
