--- a/app/views/rails_admin/main/_form_polymorphic_association.html.haml
+++ b/app/views/rails_admin/main/_form_polymorphic_association.html.haml
@@ -15,4 +15,4 @@
   end
 
 = form.select type_column, type_collection, {:include_blank => true, :selected => selected_type}, :id => column_type_dom_id, :data => { }.merge(select_data_attributes)
-= form.select field.method_name, collections[selected_type], {:include_blank => true, :selected => selected.try(:id)}, :style => "margin-left:10px;"
+= form.select field.method_name, selected_type.nil? ? [] : collections[selected_type], {:include_blank => true, :selected => selected.try(:id)}, :style => "margin-left:10px;"
